utils/force-app/main/default/serviceBase/objects/Service_Invocation__mdt/fields/Async_Platform_Event__c.field-meta.xml
<CustomField>
    <fullName>Async_Platform_Event__c</fullName>
    <label>Async Platform Event</label>
    <length>80</length>
    <type>Text</type>
</CustomField>