utils/force-app/main/default/serviceBase/objects/Service_Invocation__mdt/fields/Enforce_Stub__c.field-meta.xml
<CustomField>
    <fullName>Enforce_Stub__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked then the Stub Class is used by the service regardless of any other context logic.</description>
    <inlineHelpText>If checked then the Stub Class is used by the service regardless of any other context logic.</inlineHelpText>
    <label>Enforce Stub</label>
    <type>Checkbox</type>
</CustomField>