utils/force-app/main/default/serviceBase/objects/Service_Invocation__mdt/fields/Expect_Response__c.field-meta.xml
<CustomField>
    <fullName>Expect_Response__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if the service invocation expects a response</description>
    <inlineHelpText>Checked if the service invocation expects a response</inlineHelpText>
    <label>Expect Response</label>
    <type>Checkbox</type>
</CustomField>