utils/force-app/main/default/serviceBase/objects/Service_Invocation__mdt/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <referenceTo>Service__mdt</referenceTo>
    <relationshipLabel>Service Invocations</relationshipLabel>
    <relationshipName>Service_Invocations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>