utils/force-app/main/default/serviceBase/objects/Service_Invocation__mdt/fields/Stub_Class__c.field-meta.xml
<CustomField>
    <fullName>Stub_Class__c</fullName>
    <description>In development phases we may want to call a stub class for a service invocation. In this case we configure the Service Type to be stub and we create a Callable class to implement that stub and put its name as the Stub class.</description>
    <inlineHelpText>In development phases we may want to call a stub class for a service invocation. In this case we configure the Service Type to be stub and we create a Callable class to implement that stub and put its name as the Stub class.</inlineHelpText>
    <label>Stub Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>