utils/force-app/main/default/serviceBase/objects/Service_Invocation__mdt/fields/Test_Class__c.field-meta.xml
<CustomField>
    <fullName>Test_Class__c</fullName>
    <description>If you wish a service invocation to always use a different class when you run apex tests then you can configure a  Test class to return data instead of your runtime service. This may be very useful for example if the services implements a external callout.</description>
    <inlineHelpText>If you wish a service invocation to always use a different class when you run apex tests then you can configure a  Test class to return data instead of your runtime service. This may be very useful for example if the services implements a external callout</inlineHelpText>
    <label>Test Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>